--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,51 @@
+body {
+    padding-top: 100px;
+}
+
+@media (max-width: 979px) {
+    body {
+        padding-top: 0;
+    }
+}
+
+
+.logo {
+
+
+}
+
+.logo img {
+    display: inline-block;
+    margin-left: -66px;
+}
+.logo h1 {
+    display: inline-block;
+    font-size: 90px;
+    vertical-align: top;
+}
+
+.logo h1 small {
+    display: block;
+}
+
+
+body > .hero-unit ul {
+   margin-bottom: 40px;
+    margin-left: 20px;
+}
+body > .hero-unit .download-info {
+    position: absolute;
+    font-size: 12px;
+    margin-top: 22px;
+    margin-left: 7px;
+}
+
+pre.prettyprint .muted {
+    opacity: 0.7;
+}
+.row.buffered {
+    padding-top: 40px;
+}
 .sidebar ul li a i {
     margin-top: 3px;
 }
