--- a/css/main.css
+++ b/css/main.css
@@ -26,31 +26,90 @@ body {
 
 .logo h1 small {
     display: block;
+    text-align: right;
+    margin-top: -22px;
 }
 
+@media (max-width: 979px) {
+    .logo img {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .logo h1 {
+        display: block;
+        margin-bottom: 40px;
+    }
+
+    .logo h1 small {
+        text-align: left;
+        display: inline-block;
+        margin-top: 0;
+    }
+}
+
+@media (max-width: 767px) {
+    .logo h1 {
+        font-size: 50px;
+        display: block;
+    }
+
+    .logo h1 small {
+        display: block;
+        text-align: left;
+        font-size: 16px;
+
+    }
+}
 
 body > .hero-unit ul {
    margin-bottom: 40px;
-    margin-left: 20px;
 }
-body > .hero-unit .download-info {
-    position: absolute;
+
+.download-button-wrapper {
+    display: inline-block;
+    position: relative;
+}
+
+.hero-unit .download-info {
+    display: block;
     font-size: 12px;
-    margin-top: 22px;
-    margin-left: 7px;
 }
+@media (min-width: 980px) {
+    .hero-unit .download-button {
+        font-size: 32px;
+        padding: 20px 21px;
+    }
+
+    .hero-unit .download-info {
+        position: absolute;
+        font-size: 12px;
+        left: 100%;
+        bottom: 0;
+        white-space: nowrap;
+        vertical-align: bottom;
+        line-height: 12px;
+        margin-left: 10px;
+    }
+}
+
 
 pre.prettyprint .muted {
     opacity: 0.7;
 }
-.row.buffered {
+.buffered {
     padding-top: 40px;
 }
-.sidebar ul li a i {
-    margin-top: 3px;
+
+
+body > footer {
+    margin-top: 50px;
+    background: #ccc;
+    padding: 5px 0;
+
+
 }
 
-.sidebar ul li.divider {
-    margin-right: -15px;
-    margin-left: -15px;
+body > footer a + a {
+    margin-left: 5px;
 }
