--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,32 @@
 body {
-    padding-top: 61px;
+    /*padding-top: 61px; */
+    font-size: 16px;
 }
 
 @media (max-width: 979px) {
     body {
-        padding-top: 0;
+        /*padding-top: 0;   */
     }
 }
 
+.navbar .brand.with-icon {
+    padding-left: 85px;
+    position: relative;
+}
+
+.navbar .brand.with-icon img {
+    position: absolute;
+    left: 20px;
+    top: 0;
+}
+
+.navbar .nav > .active > a,
+.navbar .nav > .active > a:hover {
+    cursor: default;
+    text-decoration: underline;
+}
 
 .logo {
-
 
 }
 
@@ -18,6 +34,7 @@ body {
     display: inline-block;
     margin-left: -66px;
 }
+
 .logo h1 {
     display: inline-block;
     font-size: 90px;
@@ -63,7 +80,7 @@ body {
 }
 
 body > .hero-unit ul {
-   margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .download-button-wrapper {
@@ -75,6 +92,7 @@ body > .hero-unit ul {
     display: block;
     font-size: 12px;
 }
+
 @media (min-width: 980px) {
     .hero-unit .download-button {
         font-size: 32px;
@@ -93,20 +111,54 @@ body > .hero-unit ul {
     }
 }
 
+#doc-nav.sidebar .well {
+    position: fixed;
+    top: 100px;
+}
+
+#doc-nav.sidebar .nav-list.affix {
+    width: 240px;
+    margin-left: 15px;
+    padding: 0;
+    top: 19px;
+}
+
+@media (max-width: 767px) {
+    #doc-nav.sidebar .nav-list.affix {
+        position: static;
+        width: auto;
+        top: 0;
+    }
+}
+
+#doc-nav.sidebar > ul > li > ul {
+    display: none;
+}
+
+#doc-nav.sidebar > ul > li.active > ul {
+    display: block;
+}
 
 pre.prettyprint .muted {
-    opacity: 0.7;
+    opacity: 0.4;
 }
+
 .buffered {
     padding-top: 40px;
 }
 
+#content-host > div {
+    display: none;
+}
+
+.live-preview  > div {
+    border: 2px solid #333;
+}
 
 body > footer {
     margin-top: 50px;
     background: #ccc;
     padding: 5px 0;
-
 
 }
 
