--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,41 @@
 body {
-    /*padding-top: 61px; */
     font-size: 16px;
 }
 
-@media (max-width: 979px) {
-    body {
-        /*padding-top: 0;   */
-    }
+* {
+    margin: 0;
 }
+html, body {
+    height: 100%;
+}
+.page-wrapper {
+    min-height: 100%;
+    /* equal to footer height */
+    margin-bottom: -30px;
+}
+.page-wrapper:after {
+    content: "";
+    display: block;
+}
+
+.page-wrapper > .container {
+    padding-bottom: 50px;
+}
+body > footer, .page-wrapper:after {
+    /* .push must be the same height as footer */
+    height: 20px;
+    padding: 5px 0;
+}
+
+body > footer {
+    xmargin-top: 50px;
+    background: #ccc;
+}
+
+body > footer a + a {
+    margin-left: 5px;
+}
+
 
 .navbar .brand.with-icon {
     padding-left: 85px;
@@ -155,13 +183,3 @@ pre.prettyprint .muted {
     border: 2px solid #333;
 }
 
-body > footer {
-    margin-top: 50px;
-    background: #ccc;
-    padding: 5px 0;
-
-}
-
-body > footer a + a {
-    margin-left: 5px;
-}
