--- a/css/main.css
+++ b/css/main.css
@@ -145,10 +145,21 @@ body > .hero-unit ul {
 }
 
 #doc-nav.sidebar .nav-list.affix {
-    width: 240px;
+    width: 190px;
     margin-left: 15px;
     padding: 0;
     top: 19px;
+}
+
+@media (max-width: 979px) and (min-width: 768px) {
+    #doc-nav.sidebar .nav-list.affix {
+        width: 136px;
+    }
+}
+@media (min-width: 1200px) {
+    #doc-nav.sidebar .nav-list.affix {
+        width: 240px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -165,6 +176,19 @@ body > .hero-unit ul {
 
 #doc-nav.sidebar > ul > li.active > ul {
     display: block;
+    list-style-type: none;
+}
+
+#doc-nav.sidebar > ul > li.active > ul > li {
+    display: block;
+}
+
+#doc-nav.sidebar > ul > li.active > ul > li  a {
+    display: block;
+    padding: 4px 5px;
+}
+
+#doc-nav.sidebar > ul > li.active > ul > li  a.active {
 }
 
 pre.prettyprint .muted {
@@ -175,11 +199,95 @@ pre.prettyprint .muted {
     padding-top: 40px;
 }
 
+.well pre {
+    margin-bottom: 0;
+}
+
 #content-host > div {
     display: none;
+}
+
+
+#content-host hr {
+    margin: 50px 0;
 }
 
 .live-preview  > div {
     border: 2px solid #333;
 }
 
+.api-item {
+    margin: 20px 0;
+}
+
+.api-item h5 a {
+    display: block;
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    font-size: 22px;
+    font-weight: normal;
+    white-space: normal;
+    background: #333;
+    color: #f5f5f5  ;
+    padding: 5px 24px 5px 24px;
+    margin-right: -24px;
+    margin-left: -24px;
+}
+
+.api-item > p {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.api-item > p small {
+    color:#888888;
+    font-size: 12px;
+    line-height: 14px;
+}
+.api-item .signature {
+    padding: 0 10px 5px;
+    margin-top: 15px;
+    background: #E9E9E9;
+    border: 1px solid #BCBCBC ;
+    -webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.3);
+}
+
+.api-item .signature h6 {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    font-weight: bold;
+    font-size: 18px;
+    background: #3299BB;
+    padding: 4px 5px;
+    margin-left: -10px;
+    margin-right: -10px;
+    color: #fff;
+}
+
+.api-item .signature ul {
+    list-style-type: none;
+    padding: 0;
+    margin-left: 0;
+}
+
+.api-item .signature ul li {
+
+}
+.api-item .signature ul li p {
+    margin-bottom: 15px;
+    padding-top: 3px;
+}
+
+.api-item .signature ul li code {
+    color: #FF9900;
+    padding: 0;
+    background: none;
+    border: none;
+    font-weight: bold;
+}
+.api-item .signature ul li > code {
+    font-size: 20px;
+}
+
+.api-item .signature ul li p code {
+    font-size: 16px;
+}
