--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ body {
 html, body {
     height: 100%;
 }
+
+h5 {
+    font-size: 16px;
+}
 .page-wrapper {
     min-height: 100%;
     /* equal to footer height */
