--- a/css/site.css
+++ b/css/site.css
@@ -1,53 +1,138 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
 @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic);
-
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900);
+@import url(http://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400italic,500italic,600italic,700italic);
 
 body,
 td,
 textarea,
 input {
-  font-family: 'Source Sans Pro', Helvetica Neue, Open Sans, sans-serif;
-  line-height: 1.6;
-  font-size: 13px;
-  color: #505050;
+    font-family: 'Lato', Helvetica Neue, Open Sans, sans-serif;
+    line-height: 20px;
+    font-size: 14px;
+    color: #505050;
+}
+
+a,
+a:visited,
+.menu a,
+.menu a:visited {
+    color: #09d;
+}
+
+a:hover,
+a:focus
+{
+    color: #09d;
+    text-decoration: underline;
+}
+.menu a:hover,
+.menu a:focus {
+    color: #004e7d;
+    text-decoration: none;
+    background-color: rgba(0,0,0,0.05);
+}
+#site-nav {
+    /*padding-left: 100px;*/
+
+    background-image: url(../img/ico.png);
+    background-repeat: no-repeat;
+    background-position: 30px top;
+    background-color: #eeeeee; /* Old browsers */
+    background-repeat: repeat-x; /* Repeat the gradient */
+    background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #eeeeee)); /* Chrome,Safari4+ */
+    background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
+    background-image: -ms-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* IE10+ */
+    background-image: -o-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* Opera 11.10+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#eeeeee', GradientType=0); /* IE6-9 */
+    background-image: linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* W3C */
+
+    /*line-height: 60px;
+    vertical-align: middle;*/
+}
+
+#site-nav  .left > a {
+    overflow: hidden;
+    float: left;
+}
+
+.header h1 {
+    font-family: 'Raleway', Helvetica Neue, Open Sans, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.header h1.current a {
+    color: #000;
+}
+
+.header li a {
+    font-size: 13px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+.header li.current a {
+    cursor: default;
+    color: #000000;
+    text-decoration: underline;
+}
+
+.header li.separator {
+    min-height: 1px;
+    width: 20px;
+}
+
+.logo h1 {
+    font-family: 'Raleway', Helvetica Neue, Open Sans, sans-serif;
+    font-weight: 700;
+    color: #444;
+    text-shadow: 0 0 1px #fff;
 }
 
 .content h1,
 .content h2,
-.content h3 {
-  font-family: 'Source Sans Pro', Helvetica Neue, Open Sans, sans-serif;
+.content h3,
+.menu a.level-1,
+.menu a.level-2 {
+    font-family: 'Raleway', Helvetica Neue, Open Sans, sans-serif;
 }
+
 .content h1 {
-	font-weight: 900;
+    font-weight: 900;
 }
 
 .content h1 ~ h1 {
-	padding-top: 100px;
+    padding-top: 100px;
 }
 
 .content h1::before {
-	content: none;
+    content: none;
 }
 
 .content h2 {
-	text-transform: none;
-	font-size: 1.6em;
+    text-transform: none;
+    font-size: 1.6em;
 }
 
 .content h2::before {
-	height: 2px;
+    height: 2px;
 }
 
 .content h3 {
-	font-size: 1.4em;
+    font-size: 1.4em;
 }
+
 .content h3 small {
-	font-weight: 300;
+    font-weight: 300;
 }
+
 .content h3 a {
-	display: inline-block;
-	margin-left: 5px;
+    display: inline-block;
+    margin-left: 5px;
 }
 
 .content h6 {
@@ -55,43 +140,44 @@ input {
 }
 
 .content h6 code {
-	font-size: 14px;
-	font-weight: 400;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .large-brief .content > h1:first-child + p,
 .large-brief .content > h1 + p,
 .content > p.brief {
-  font-size: 1.3em;
-  font-family: 'Source Sans Pro', Helvetica Neue, Open Sans, sans-serif;
-  font-weight: 300;
+    font-size: 1.3em;
+    font-family: 'Lato', Helvetica Neue, Open Sans, sans-serif;
+    font-weight: 300;
 }
 
-.content pre,
-.content code,
+pre,
+code,
 .menu.legend dl dt {
-	font-family: "Source Code Pro", Menlo, monospace;
+    font-family: "Source Code Pro", Menlo, monospace;
 }
 
 .content blockquote {
-	padding-left: 20px;
-	border-left: 4px solid #ddd;
-	background: rgb(245, 245, 245);
-	margin: 10px 0 20px 15px;
+    padding-left: 20px;
+    border-left: 4px solid #ddd;
+    background: rgb(245, 245, 245);
+    margin: 10px 0 20px 15px;
 }
 
 .content blockquote p {
 
 }
+
 .cp_embed_iframe {
-	border: 1px solid #ccc;
-}	
+    border: 1px solid #ccc;
+}
 
 .menu a.level-1 {
-	font-size: 1.1em;
-	margin-bottom: 5px;
+    font-size: 1.1em;
+    margin-bottom: 5px;
 }
 
 .menu .level-2 > li + li {
-	margin-top: 8px;
+    margin-top: 8px;
 }
