--- a/css/site.css
+++ b/css/site.css
@@ -109,6 +109,11 @@ a:focus
     padding-left: 15px;
     list-style: square;
 }
+
+.home .content {
+    padding: 0;
+    max-width: initial;
+}
 .content h1,
 .content h2,
 .content h3,
@@ -158,6 +163,18 @@ a:focus
 .content h6 code {
     font-size: 14px;
     font-weight: 400;
+}
+
+.home .content h2 {
+    font-size: 36px;  
+}
+
+.home .content h2::before {
+    display: none;
+}
+
+.home .content > p:first-child {
+    font-size: 20px;
 }
 
 .large-brief .content > h1:first-child + p,
