--- a/css/site.css
+++ b/css/site.css
@@ -124,6 +124,8 @@ a:focus
 
 .content h1 {
     font-weight: 900;
+    font-size: 2.2em;
+    line-height: 40px;
 }
 
 .content h1 ~ h1 {
@@ -136,7 +138,8 @@ a:focus
 
 .content h2 {
     text-transform: none;
-    font-size: 1.6em;
+    font-size: 2em;
+    line-height: 30px;
 }
 
 .content h2::before {
