Samples page added

--- a/css/site.css
+++ b/css/site.css
@@ -159,6 +159,10 @@ a:focus
     margin-left: 5px;
 }
 
+.content h3 + div > iframe,
+.content p + div > iframe {
+    margin-top: 20px;
+}
 .content h6 {
 
 }
