--- a/css/site.css
+++ b/css/site.css
@@ -13,6 +13,9 @@ input {
     color: #505050;
 }
 
+body.with-logo {
+
+}
 a,
 a:visited,
 .menu a,
@@ -21,17 +24,18 @@ a:visited,
 }
 
 a:hover,
-a:focus
-{
+a:focus {
     color: #09d;
     text-decoration: underline;
 }
+
 .menu a:hover,
 .menu a:focus {
     color: #004e7d;
     text-decoration: none;
-    background-color: rgba(0,0,0,0.05);
+    background-color: rgba(0, 0, 0, 0.05);
 }
+
 #site-nav {
     /*padding-left: 100px;*/
 
@@ -52,7 +56,7 @@ a:focus
     vertical-align: middle;*/
 }
 
-#site-nav  .left > a {
+#site-nav .left > a {
     overflow: hidden;
     float: left;
 }
@@ -114,6 +118,7 @@ a:focus
     padding: 0;
     max-width: initial;
 }
+
 .content h1,
 .content h2,
 .content h3,
@@ -163,6 +168,7 @@ a:focus
 .content p + div > iframe {
     margin-top: 20px;
 }
+
 .content h6 {
 
 }
@@ -173,7 +179,7 @@ a:focus
 }
 
 .home .content h2 {
-    font-size: 36px;  
+    font-size: 36px;
 }
 
 .home .content h2::before {
@@ -203,10 +209,11 @@ code,
 .content pre {
     background-color: #f5f5f5;
     border: 1px solid #ccc;
-    border: 1px solid rgba(0,0,0,0.15);
+    border: 1px solid rgba(0, 0, 0, 0.15);
     -webkit-border-radius: 2px;
     border-radius: 2px;
 }
+
 body.no-literate .content pre > code,
 .content pre > code {
     border: none;
@@ -215,7 +222,8 @@ body.no-literate .content pre > code,
 }
 
 .content h4 + pre,
-.content pre + pre {
+.content pre + pre,
+.content pre + div {
     margin-top: 20px;
 }
 
@@ -260,10 +268,10 @@ body.no-literate .content pre > code,
     -ms-transition: all 120ms ease-in;
     -o-transition: all 120ms ease-in;
     transition: all 120ms ease-in;
-    box-shadow: inset 2px 1px 4px rgba(0,0,0,0.4);
-    -webkit-box-shadow: inset 2px 1px 4px rgba(0,0,0,0.4);
+    box-shadow: inset 2px 1px 4px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 2px 1px 4px rgba(0, 0, 0, 0.4);
     text-align: center;
-    }
+}
 
 .top-link::after {
     content: '^';
@@ -271,10 +279,11 @@ body.no-literate .content pre > code,
     left: 9px;
     top: 9px;
 }
+
 .top-link:hover {
     text-decoration: none;
-    box-shadow: inset 5px 3px 2px rgba(0,0,0,0.4);
-    -webkit-box-shadow: inset 5px 3px 2px rgba(0,0,0,0.4);
+    box-shadow: inset 5px 3px 2px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 5px 3px 2px rgba(0, 0, 0, 0.4);
 }
 
 .top-link:hover::after {
@@ -283,21 +292,41 @@ body.no-literate .content pre > code,
     -moz-perspective: 300px;
     -ms-perspective: 300px;
     perspective: 300px;
-    -webkit-transform: rotateY(-30deg);  -webkit-transform-style: preserve-3d;
-    -moz-transform: rotateY(-30deg);     -moz-transform-style: preserve-3d;
-    -ms-transform: rotateY(-30deg);      -ms-transform-style: preserve-3d;
-    transform: rotateY(-30deg);          transform-style: preserve-3d;
+    -webkit-transform: rotateY(-30deg);
+    -webkit-transform-style: preserve-3d;
+    -moz-transform: rotateY(-30deg);
+    -moz-transform-style: preserve-3d;
+    -ms-transform: rotateY(-30deg);
+    -ms-transform-style: preserve-3d;
+    transform: rotateY(-30deg);
+    transform-style: preserve-3d;
 
+}
+
+.menubar {
+}
+
+.menubar::after {
+    content: "";
+    display: block;
+    width: 80px;
+    height:100px;
+    background: transparent url(../img/logo.svg) no-repeat left bottom;
+    background-size: contain;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 .menubar.fixed + .top-link {
     opacity: 1;
-    -moz-transform: translateX(0px) translateY(0px) ;
-    -webkit-transform: translateX(0px) translateY(0px) ;
-    -o-transform: translateX(0px) translateY(0px) ;
-    -ms-transform: translateX(0px) translateY(0px) ;
+    -moz-transform: translateX(0px) translateY(0px);
+    -webkit-transform: translateX(0px) translateY(0px);
+    -o-transform: translateX(0px) translateY(0px);
+    -ms-transform: translateX(0px) translateY(0px);
     transform: translateX(0px) translateY(0px);
 }
+
 .menu a.level-1, .menu a.level-1:visited {
     color: #999;
     font-size: 1.1em;
