--- a/css/site.css
+++ b/css/site.css
@@ -107,8 +107,8 @@ a:focus {
 }
 
 .hero-unit ul {
-    padding-left: 15px;
-    list-style: square;
+    /*padding-left: 15px;*/
+    /*list-style: square;*/
 }
 
 .home .content {
@@ -177,6 +177,7 @@ a:focus {
 
 .home .content h2 {
     font-size: 36px;
+    padding-top: 30px;
 }
 
 .home .content h2::before {
@@ -185,6 +186,7 @@ a:focus {
 
 .home .content > p:first-child {
     font-size: 20px;
+    line-height: 26px;
 }
 
 .large-brief .content > h1:first-child + p,
