--- a/css/main.css
+++ b/css/main.css
@@ -97,28 +97,30 @@ body > footer a + a {
     }
 
     .logo h1 {
-        display: block;
-        margin-bottom: 40px;
+        font-size: 70px;
+        /*display: block;
+        margin-bottom: 40px;*/
     }
 
     .logo h1 small {
-        text-align: left;
-        display: inline-block;
-        margin-top: 0;
+        /*text-align: left;*/
+        /*display: inline-block;
+        margin-top: 0;*/
+        margin-top: -15px;
     }
 }
 
 @media (max-width: 767px) {
     .logo h1 {
-        font-size: 50px;
-        display: block;
+        font-size: 60px;
+        /*display: block;*/
     }
 
     .logo h1 small {
-        display: block;
+        /*display: block;
         text-align: left;
-        font-size: 16px;
-
+        font-size: 16px;*/
+        margin-top: -10px;
     }
 }
 
