--- a/css/site.css
+++ b/css/site.css
@@ -336,3 +336,23 @@ body.no-literate .content pre > code,
 .download-button-wrapper a {
     color: #fff;
 }
+
+body > footer, .page-wrapper:after {
+    /* .push must be the same height as footer */
+    height: 20px;
+    padding: 5px 0;
+}
+
+body > footer {
+    xmargin-top: 50px;
+    background: #f5f5f5;
+    border-top: 1px solid #f2f2f2;
+}
+
+body > footer a + a {
+    margin-left: 5px;
+}
+
+footer .ghbtn {
+    display: inline-block;
+}
