fonts and menues

--- a/less/import/daux-base.less
+++ b/less/import/daux-base.less
@@ -20,7 +20,7 @@
   -moz-box-shadow: none;
 }
 .sans-serif(@weight: normal, @size: 14px, @lineheight: 20px) {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: @size;
   font-weight: @weight;
   line-height: @lineheight;
@@ -489,6 +489,9 @@ code {
 				//border-bottom: none;
 			}
 		}
+      .nav.nav-list .nav.nav-list {
+        display: block !important;
+      }
 		ul {
 			display: none;
 			margin-left: 15px;
