--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 * {
     margin: 0;
 }
+
 html, body {
     height: 100%;
 }
@@ -12,11 +13,13 @@ html, body {
 h5 {
     font-size: 16px;
 }
+
 .page-wrapper {
     min-height: 100%;
     /* equal to footer height */
     margin-bottom: -30px;
 }
+
 .page-wrapper:after {
     content: "";
     display: block;
@@ -25,8 +28,6 @@ h5 {
 .page-wrapper > .container {
     padding-bottom: 50px;
 }
-
-
 
 .navbar .brand.with-icon {
     padding-left: 85px;
@@ -61,8 +62,9 @@ h5 {
 }
 
 .logo h1 span {
-    
+
 }
+
 .logo h1 small {
     display: block;
     text-align: right;
@@ -77,6 +79,7 @@ h5 {
     font-size: 18px;
     line-height: 22px;
 }
+
 @media (max-width: 979px) {
     .logo img {
         display: block;
@@ -120,27 +123,67 @@ body > .hero-unit ul {
     position: relative;
 }
 
-.hero-unit .download-info {
+.hero-unit {
+    margin-bottom: 0;
+}
+
+.download-info {
     display: block;
     font-size: 12px;
 }
 
 @media (min-width: 980px) {
-    .hero-unit .download-button {
-        font-size: 32px;
-        padding: 20px 21px;
-    }
 
-    .hero-unit .download-info {
-        position: absolute;
+    .download-info {
         font-size: 12px;
-        left: 100%;
-        bottom: 0;
         white-space: nowrap;
         vertical-align: bottom;
-        line-height: 12px;
-        margin-left: 10px;
+        line-height: 18px;
     }
+}
+
+.button-hero {
+    padding: 20px 0;
+    background: #45413e;
+}
+
+.button-hero .btn {
+    text-shadow: none;
+    color: #fff;
+    background: transparent;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    background-clip: padding-box;
+    border: 4px solid #f2f2f2;
+    font-weight: 700;
+    font-size: 18px;
+    padding: 20px 30px;
+    font-family: 'Lato', Helvetica Neue, Open Sans, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    -webkit-transition: background 120ms ease-out;
+    -moz-transition: background 120ms ease-out;
+    -o-transition: background 120ms ease-out;
+    transition: background 120ms ease-out;
+
+}
+
+.button-hero .btn:hover,
+.button-hero .btn:active {
+    background: #333;
+}
+
+.button-hero .download-button-wrapper + .download-button-wrapper {
+    margin-left: 20px;
+}
+
+.button-hero .btn.btn-primary {
+    background: #555;
+}
+
+.button-hero .btn.btn-primary:hover,
+.button-hero .btn.btn-primary:active {
+    background: #333;
 }
 
 #doc-nav.sidebar .well {
@@ -160,6 +203,7 @@ body > .hero-unit ul {
         width: 136px;
     }
 }
+
 @media (min-width: 1200px) {
     #doc-nav.sidebar .nav-list.affix {
         width: 240px;
@@ -187,12 +231,12 @@ body > .hero-unit ul {
     display: block;
 }
 
-#doc-nav.sidebar > ul > li.active > ul > li  a {
+#doc-nav.sidebar > ul > li.active > ul > li a {
     display: block;
     padding: 4px 5px;
 }
 
-#doc-nav.sidebar > ul > li.active > ul > li  a.active {
+#doc-nav.sidebar > ul > li.active > ul > li a.active {
 }
 
 pre.prettyprint .muted {
@@ -211,12 +255,11 @@ pre.prettyprint .muted {
     display: none;
 }
 
-
 #content-host hr {
     margin: 50px 0;
 }
 
-.live-preview  > div {
+.live-preview > div {
     border: 2px solid #333;
 }
 
@@ -231,7 +274,7 @@ pre.prettyprint .muted {
     font-weight: normal;
     white-space: normal;
     background: #333;
-    color: #f5f5f5  ;
+    color: #f5f5f5;
     padding: 5px 24px 5px 24px;
     margin-right: -24px;
     margin-left: -24px;
@@ -243,17 +286,18 @@ pre.prettyprint .muted {
 }
 
 .api-item > p small {
-    color:#888888;
+    color: #888888;
     font-size: 12px;
     line-height: 14px;
 }
+
 .api-item .signature {
     padding: 0 10px 5px;
     margin-top: 15px;
     background: #E9E9E9;
-    border: 1px solid #BCBCBC ;
-    -webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.3);
-    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.3);
+    border: 1px solid #BCBCBC;
+    -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.3);
 }
 
 .api-item .signature h6 {
@@ -276,6 +320,7 @@ pre.prettyprint .muted {
 .api-item .signature ul li {
 
 }
+
 .api-item .signature ul li p {
     margin-bottom: 15px;
     padding-top: 3px;
@@ -288,6 +333,7 @@ pre.prettyprint .muted {
     border: none;
     font-weight: bold;
 }
+
 .api-item .signature ul li > code {
     font-size: 20px;
 }
