--- a/css/flatdoc-white.css
+++ b/css/flatdoc-white.css
@@ -568,9 +568,10 @@ body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb {
 }
 .header .right {
   text-align: right;
-  position: absolute;
+  /*position: absolute;
   right: 15px;
-  top: 15px;
+  top: 15px;*/
+    float: right;
 }
 .header .right iframe {
   display: inline-block;
@@ -627,8 +628,22 @@ body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb {
   }
 }
 @media (max-width: 480px) /* Mobile */ {
-  .right {
-    display: none;
+    .header .left {
+        float: none;
+    }
+
+    .header .left ul {
+        margin-left: 0;
+    }
+
+    .header .left ul li {
+        margin-top: 5px;
+    }
+  .header .right {
+    /*display: none;*/
+      text-align: left;
+      margin-top: 10px;
+      float: none;
   }
 }
 .menubar {
@@ -684,7 +699,7 @@ a.big.button:hover:visited {
 }
 @media (max-width: 768px) /* Mobile and tablet */ {
   .menubar {
-    display: none;
+    /*display: none;*/
   }
 }
 @media (min-width: 768px) /* Desktop */ {
@@ -692,15 +707,15 @@ a.big.button:hover:visited {
     padding-left: 230px;
   }
   .menubar {
-    position: absolute;
+    /*position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
-    width: 230px;
+    width: 230px;*/
     border-right: solid 1px #dfe2e7;
   }
   .menubar.fixed {
-    position: fixed;
+    /*position: fixed;*/
     overflow-y: auto;
   }
   .menubar.fixed {
