--- a/css/site.css
+++ b/css/site.css
@@ -58,25 +58,30 @@ a:focus {
     float: left;
 }
 
-
+.the-menu {
+    padding: 0 !important;
+}
 
 .the-menu .menubar {
     -webkit-overflow-scrolling: touch;
 }
+
 .the-menu .menubar::-webkit-scrollbar {
     width: 15px;
     height: 15px;
 }
+
 .the-menu .menubar::-webkit-scrollbar-thumb {
     background: #ddd;
     -webkit-border-radius: 8px;
     border-radius: 8px;
     border: solid 4px #fff;
 }
+
 .the-menu .menubar:hover::-webkit-scrollbar-thumb {
     background: #999;
-    -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2);
-    box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2);
+    -webkit-box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
 .the-menu .menubar {
@@ -84,7 +89,7 @@ a:focus {
     width: 219px;
     bottom: 0;
     top: 0;
-
+    padding: 0;
 }
 
 @media (min-width: 1200px) {
@@ -106,7 +111,7 @@ a:focus {
     .the-menu .menubar {
         position: static !important;
         width: auto;
-        
+
     }
 }
 
@@ -152,13 +157,13 @@ a:focus {
     -moz-box-shadow: none;
 }
 
-
-@media (min-width: 769px) /* tablet - desktop*/ {
+@media (min-width: 768px) /* tablet - desktop*/ {
     .the-menu .menubar {
         display: block !important;
     }
 }
-@media (max-width: 768px) /* Mobile and tablet */ {
+
+@media (max-width: 767px) /* Mobile and tablet */ {
     .the-menu {
         background: rgba(245, 245, 245, 0.7);
         border-bottom: 1px solid #ccc;
@@ -221,8 +226,6 @@ a:focus {
     min-height: 1px;
     width: 20px;
 }
-
-
 
 .home .content {
     padding: 0;
@@ -299,6 +302,69 @@ a:focus {
 .content h6 code {
     font-size: 14px;
     font-weight: 400;
+    white-space: normal;
+    white-space: normal;
+}
+.content code {
+    background: #f9f2f4;
+}
+
+.content .method-definition + h6 {
+    margin-bottom: 0;
+    background: #ddd;
+    padding-left: 10px;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    border-bottom: none;
+}
+
+.content .method-definition + h6 code {
+    background: transparent;
+    font-size: 12px;
+}
+.content .method-definition + h6 + p {
+    margin-bottom: 0;
+    padding-left: 30px;
+    padding-right: 10px;
+    background: #f5f5f5;
+    font-size: 12px;
+    font-weight: 700;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-bottom: none;
+}
+.content .method-definition + h6 + ul,
+.content .method-definition + h6 + p + ul {
+    background: #f5f5f5;
+    margin-left: 0;
+    padding-left: 52px;
+    padding-right: 10px;
+    list-style: none;
+    margin-bottom: 40px;
+    border: 1px solid #ccc;
+    border-top: none;
+
+}
+
+.content .method-definition + h6 + ul li::before,
+.content .method-definition + h6 + p + ul li::before {
+    content: none;
+}
+
+.content .method-definition + h6 + ul li strong:first-child,
+.content .method-definition + h6 + p + ul li strong:first-child {
+    margin-left: -25px;
+}
+
+.content .method-definition + h6 + ul li strong:first-child code,
+.content .method-definition + h6 + p + ul li strong:first-child code {
+    background: #f9f2f4;
+}
+
+.content .method-definition + h6 + ul li code,
+.content .method-definition + h6 + p + ul li code {
+    background: transparent;
+    padding: 0;
 }
 
 .home .content h2 {
