--- a/css/flatdoc-white.css
+++ b/css/flatdoc-white.css
@@ -1,7 +1,4 @@
-/* ----------------------------------------------------------------------------
- * Fonts
- */
-@import url("http://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300");
+
 /* ----------------------------------------------------------------------------
  * Base
  */
@@ -107,7 +104,7 @@ body,
 td,
 textarea,
 input {
-  font-family: Helvetica Neue, Open Sans, sans-serif;
+  font-family: Helvetica Neue, Lato, sans-serif;
   line-height: 1.6;
   font-size: 13px;
   color: #505050;
@@ -251,7 +248,7 @@ a:hover {
 .content h3 {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: montserrat;
+  font-family: Raleway;
   padding-bottom: 0;
 }
 .content h1 + p,
@@ -423,7 +420,7 @@ body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb {
 .button {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: montserrat, sans-serif;
+  font-family: Raleway, sans-serif;
   letter-spacing: -1px;
   font-weight: bold;
   display: inline-block;
@@ -581,7 +578,7 @@ body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-weight: bold;
-  font-family: montserrat, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 13px;
 }
 .header h1,
@@ -677,7 +674,7 @@ a.big.button {
   border: solid 3px #2badad;
   -webkit-border-radius: 30px;
   border-radius: 30px;
-  font-family: montserrat, sans-serif;
+  font-family: Raleway, sans-serif;
 }
 a.big.button,
 a.big.button:visited {
@@ -761,7 +758,7 @@ a.big.button:hover:visited {
   color: #228a8a;
 }
 .menu a.level-1 {
-  font-family: montserrat, sans-serif;
+  font-family: Raleway, sans-serif;
   text-transform: uppercase;
   font-size: 0.9em;
   font-weight: bold;
@@ -820,7 +817,7 @@ code .comment {
 .large-brief .content > h1:first-child + p,
 .content > p.brief {
   font-size: 1.3em;
-  font-family: Open Sans, sans-serif;
+  font-family: Lato, sans-serif;
   font-weight: 300;
 }
 .title-area {
