--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h5 {
     text-decoration: underline;
 }
 .logo h1 {
-    font-family: 'Raleway', Helvetica Neue, Open Sans, sans-serif;
+    font-family: 'Roboto', Helvetica Neue, Open Sans, sans-serif;
     font-weight: 700;
     color: #444;
     text-shadow: 0 0 1px #fff;
@@ -58,11 +58,11 @@ h5 {
 
 .logo h1 small {
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .logo h1 small em {
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     color: #D5D5D5;
 }
@@ -98,7 +98,7 @@ h5 {
 }
 
 .facts h3 {
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .facts p.lead {
@@ -119,10 +119,10 @@ h5 {
     border-radius: 0;
     background-clip: padding-box;
     border: 4px solid #f2f2f2;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 18px;
     padding: 20px 30px;
-    font-family: 'Lato', Helvetica Neue, Open Sans, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     letter-spacing: 1px;
     -webkit-transition: background 120ms ease-out;
